Fix stretch icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -424,3 +424,7 @@ pre {
 .flex {
     display: flex !important;
 }
+
+.tour-scala-logo {
+    height: fit-content;
+}
